force-app/main/default/objects/PickupRequest__c/PickupRequest__c.object-meta.xml
<CustomObject>
    <label>引取依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>引取依頼名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>