force-app/main/default/objects/PickupRequest__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <description>山本</description>
    <inlineHelpText>依頼時のABC区分が転記されます。</inlineHelpText>
    <label>ABC区分</label>
    <length>30</length>
    <type>Text</type>
</CustomField>