force-app/main/default/objects/PickupRequest__c/fields/Account_code_MVR__c.field-meta.xml
<CustomField>
    <fullName>Account_code_MVR__c</fullName>
    <formula>PurchaseOpportunity__r.Account__r.AccountCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先コード（MVR）</label>
    <type>Text</type>
</CustomField>