force-app/main/default/objects/PickupRequest__c/fields/Account_MVR__c.field-meta.xml
<CustomField>
    <fullName>Account_MVR__c</fullName>
    <formula>IF ( NOT( ISBLANK( Case__c ) ) ,  Case__r.Owner:User.LastName&amp; &quot; &quot; &amp; Case__r.Owner:User.FirstName  , 
IF( AccountName_MVR__c =&quot;ソコカラセレクト岸和田&quot;,&quot;ソコリテ担当&quot;,
 PurchaseOpportunity__r.Owner:User.LastName &amp; &quot; &quot; &amp; PurchaseOpportunity__r.Owner:User.FirstName ))</formula>
    <label>営業担当（MVR）</label>
    <type>Text</type>
</CustomField>