force-app/main/default/objects/PickupRequest__c/fields/AccountName_MVR__c.field-meta.xml
<CustomField>
    <fullName>AccountName_MVR__c</fullName>
    <formula>IF(  NOT( ISBLANK( Case__c)) , Case__r.Account__r.LastName &amp;  Case__r.Account__r.FirstName ,
IF(  PurchaseOpportunity__r.Account__r.IsPerson__c = TRUE, PurchaseOpportunity__r.Account__r.PersonContact.LastName &amp; PurchaseOpportunity__r.Account__r.PersonContact.FirstName ,
PurchaseOpportunity__r.Account__r.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先（MVR）</label>
    <type>Text</type>
</CustomField>