force-app/main/default/objects/PickupRequest__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>MVRが解体料金と比較するために必要なため作成　山本</description>
    <formula>IF(  ISBLANK( PurchaseOpportunity__c), Case__r.Amount__c, PurchaseOpportunity__r.TotalPayment__c )</formula>
    <label>買取金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>