force-app/main/default/objects/PickupRequest__c/fields/AntennaShop__c.field-meta.xml
<CustomField>
    <fullName>AntennaShop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アンテナ対応</label>
    <type>Checkbox</type>
</CustomField>