force-app/main/default/objects/PickupRequest__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>査定表</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>Assessment_PickupRequest</relationshipName>
    <type>Lookup</type>
</CustomField>