force-app/main/default/objects/PickupRequest__c/fields/Auction_date__c.field-meta.xml
<CustomField>
    <fullName>Auction_date__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>オークション開催日</label>
    <type>Date</type>
</CustomField>