force-app/main/default/objects/PickupRequest__c/fields/BatteryDead__c.field-meta.xml
<CustomField>
    <fullName>BatteryDead__c</fullName>
    <description>山本</description>
    <formula>IF( NOT( ISBLANK(  PurchaseOpportunity__c )),PurchaseOpportunity__r.BatteryDead__c , Case__r.BatteryDead__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>バッテリ上がり（走行可）</label>
    <type>Checkbox</type>
</CustomField>