force-app/main/default/objects/PickupRequest__c/fields/BC_MVR__c.field-meta.xml
<CustomField>
    <fullName>BC_MVR__c</fullName>
    <formula>CASE( BC__c , &quot;B&quot;, &quot;Bあり&quot;, &quot;Bプラス&quot;,&quot;Bあり&quot;,&quot;C&quot;,&quot;C&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC区分（MVR）</label>
    <type>Text</type>
</CustomField>