force-app/main/default/objects/PickupRequest__c/fields/Bringingin_Yard__c.field-meta.xml
<CustomField>
    <fullName>Bringingin_Yard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>搬入予定ヤード</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Yard__c.Name</field>
            <operation>notContain</operation>
            <value>使用禁止_,確認中,使用停止</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>PickupRequest_Yard</relationshipName>
    <type>Lookup</type>
</CustomField>