force-app/main/default/objects/PickupRequest__c/fields/Bringingin_Yard_Address__c.field-meta.xml
<CustomField>
    <fullName>Bringingin_Yard_Address__c</fullName>
    <description>山本</description>
    <formula>Bringingin_Yard__r.DeliveryAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入先住所</label>
    <type>Text</type>
</CustomField>