force-app/main/default/objects/PickupRequest__c/fields/Bringingin_Yard_DestinationNotes__c.field-meta.xml
<CustomField>
    <fullName>Bringingin_Yard_DestinationNotes__c</fullName>
    <description>山本</description>
    <formula>Bringingin_Yard__r.DestinationNotes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入先注意事項</label>
    <type>Text</type>
</CustomField>