force-app/main/default/objects/PickupRequest__c/fields/Bringingin_Yard_Person__c.field-meta.xml
<CustomField>
    <fullName>Bringingin_Yard_Person__c</fullName>
    <description>山本</description>
    <formula>Bringingin_Yard__r.DeliveryDestinationPerson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入先担当者</label>
    <type>Text</type>
</CustomField>