force-app/main/default/objects/PickupRequest__c/fields/Bringingin_Yard_TEL__c.field-meta.xml
<CustomField>
    <fullName>Bringingin_Yard_TEL__c</fullName>
    <description>山本</description>
    <formula>Bringingin_Yard__r.DeliveryPhonenumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入先電話番号</label>
    <type>Text</type>
</CustomField>