force-app/main/default/objects/PickupRequest__c/fields/BringinginYard__c.field-meta.xml
<CustomField>
    <fullName>BringinginYard__c</fullName>
    <label>【旧】搬入予定ヤード</label>
    <length>50</length>
    <type>Text</type>
</CustomField>