force-app/main/default/objects/PickupRequest__c/fields/BringinginYard_Formula__c.field-meta.xml
<CustomField>
    <fullName>BringinginYard_Formula__c</fullName>
    <description>作成：山本</description>
    <formula>IF( NOT( ISBLANK(  BringinginYard__c  )), BringinginYard__c , 
 IF( NOT( ISBLANK( Bringingin_Yard__c  )), Bringingin_Yard__r.Name ,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>営業とコールセンターに表示されています。</inlineHelpText>
    <label>搬入予定ヤード（表示用）</label>
    <type>Text</type>
</CustomField>