force-app/main/default/objects/PickupRequest__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <label>営業時間</label>
    <length>50</length>
    <type>Text</type>
</CustomField>