force-app/main/default/objects/PickupRequest__c/fields/BusinessHours_MVR__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours_MVR__c</fullName>
    <formula>BusinessHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業時間（MVR）</label>
    <type>Text</type>
</CustomField>