force-app/main/default/objects/PickupRequest__c/fields/CallABC__c.field-meta.xml
<CustomField>
    <fullName>CallABC__c</fullName>
    <formula>IF ( NOT( ISBLANK( PurchaseOpportunity__c ) ) ,  PurchaseOpportunity__r.ABC__c ,  TEXT( Case__r.VehicleClassification__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リユースABC区分</label>
    <type>Text</type>
</CustomField>