force-app/main/default/objects/PickupRequest__c/fields/CallCenterA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CallCenterA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コールA商談</label>
    <referenceTo>CallCenterA_Opportunity__c</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>CallCenterA_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>