force-app/main/default/objects/PickupRequest__c/fields/cancel_date_time__c.field-meta.xml
<CustomField>
    <fullName>cancel_date_time__c</fullName>
    <description>依頼内容変更/依頼キャンセルで「依頼キャンセル」が選択された場合に日時がセットされる。山本</description>
    <label>キャンセル日時</label>
    <type>DateTime</type>
</CustomField>