force-app/main/default/objects/PickupRequest__c/fields/Cancel_Done__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>物流段取の保留/キャンセル処理が完了したらチェックを入れてください。</inlineHelpText>
    <label>キャンセル処理済み（営業サポート）</label>
    <type>Checkbox</type>
</CustomField>