force-app/main/default/objects/PickupRequest__c/fields/cancel_done_logistics__c.field-meta.xml
<CustomField>
    <fullName>cancel_done_logistics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>物流/リサイクル推進部にてキャンセル処理を行なった場合はこちらにチェックを付ける。山本</description>
    <label>キャンセル処理済み（物流/リサイクル推進部）</label>
    <type>Checkbox</type>
</CustomField>