force-app/main/default/objects/PickupRequest__c/fields/cancel_done_logistics_person__c.field-meta.xml
<CustomField>
    <fullName>cancel_done_logistics_person__c</fullName>
    <description>キャンセル処理済み（物流）にチェックを付けた人の名前が転記される。山本</description>
    <label>キャンセル処理対応者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>