force-app/main/default/objects/PickupRequest__c/fields/Cansel_AfterPickup__c.field-meta.xml
<CustomField>
    <fullName>Cansel_AfterPickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <inlineHelpText>引取後の案件キャンセルの場合にチェックをつける</inlineHelpText>
    <label>引取後案件キャンセル</label>
    <type>Checkbox</type>
</CustomField>