force-app/main/default/objects/PickupRequest__c/fields/CarINUM_formula__c.field-meta.xml
<CustomField>
    <fullName>CarINUM_formula__c</fullName>
    <description>山本</description>
    <formula>IF( NOT( ISBLANK(  Case__c )), Case__r.CarTypes__r.inum__c , PurchaseOpportunity__r.Mst_Models__r.inum__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種INUM（MVR）</label>
    <type>Text</type>
</CustomField>