force-app/main/default/objects/PickupRequest__c/fields/CarName_CarNo__c.field-meta.xml
<CustomField>
    <fullName>CarName_CarNo__c</fullName>
    <description>山本</description>
    <formula>CarName_MVR__c &amp; &apos;・&apos; &amp; CarNo_MVR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車名・車台番号</label>
    <type>Text</type>
</CustomField>