force-app/main/default/objects/PickupRequest__c/fields/CarName_MVR__c.field-meta.xml
<CustomField>
    <fullName>CarName_MVR__c</fullName>
    <formula>Mst_Models_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車名（MVR）</label>
    <type>Text</type>
</CustomField>