force-app/main/default/objects/PickupRequest__c/fields/CarNo_MVR__c.field-meta.xml
<CustomField>
    <fullName>CarNo_MVR__c</fullName>
    <formula>CarNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号（MVR）</label>
    <type>Text</type>
</CustomField>