force-app/main/default/objects/PickupRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取受付</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>Case_PickupRequest</relationshipName>
    <type>Lookup</type>
</CustomField>