force-app/main/default/objects/PickupRequest__c/fields/ChangeDateCount__c.field-meta.xml
<CustomField>
    <fullName>ChangeDateCount__c</fullName>
    <description>喜多</description>
    <label>日程変更カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>