force-app/main/default/objects/PickupRequest__c/fields/CharteredCarSlip__c.field-meta.xml
<CustomField>
    <fullName>CharteredCarSlip__c</fullName>
    <description>佐野作成(喜多依頼分)
傭車先の伝票番号
ゼロに配送依頼した場合に設定される</description>
    <label>傭車先伝票番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>