force-app/main/default/objects/PickupRequest__c/fields/CollectionRequestSubject__c.field-meta.xml
<CustomField>
    <fullName>CollectionRequestSubject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>引取依頼取込対象</label>
    <type>Checkbox</type>
</CustomField>