force-app/main/default/objects/PickupRequest__c/fields/Comment_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Comment_Logistics__c</fullName>
    <label>コメント</label>
    <type>TextArea</type>
</CustomField>