force-app/main/default/objects/PickupRequest__c/fields/ComparisonCompany__c.field-meta.xml
<CustomField>
    <fullName>ComparisonCompany__c</fullName>
    <label>比較業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テイクオフ</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>