force-app/main/default/objects/PickupRequest__c/fields/ComparisonPrice__c.field-meta.xml
<CustomField>
    <fullName>ComparisonPrice__c</fullName>
    <label>比較料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>