force-app/main/default/objects/PickupRequest__c/fields/CreateLot_OK__c.field-meta.xml
<CustomField>
    <fullName>CreateLot_OK__c</fullName>
    <description>山本</description>
    <formula>OR( OBIC_master_formula__c = TRUE,  CONTAINS(Summary_AccountCode_MVR__c , &quot;CC&quot;),CONTAINS(Summary_AccountCode_MVR__c , &quot;SR&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>立ち上げOK</label>
    <type>Checkbox</type>
</CustomField>