force-app/main/default/objects/PickupRequest__c/fields/Dayoff_Setup__c.field-meta.xml
<CustomField>
    <fullName>Dayoff_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>リユース事業部に指示書作成を依頼する（休日至急）</label>
    <type>Checkbox</type>
</CustomField>