force-app/main/default/objects/PickupRequest__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <formula>IF( NOT( ISBLANK( PurchaseOpportunity__c ) ) ,
  PurchaseOpportunity__r.Owner:User.Department ,
   Case__r.Owner:User.Department )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署（営業担当）</label>
    <type>Text</type>
</CustomField>