force-app/main/default/objects/PickupRequest__c/fields/Desired_amount__c.field-meta.xml
<CustomField>
    <fullName>Desired_amount__c</fullName>
    <description>買取受付の売り予想を表示。山本</description>
    <formula>IF( NOT( ISBLANK(  Case__c )), Case__r.Desired_amount_hs__c , PurchaseOpportunity__r.Estimate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売り予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>