force-app/main/default/objects/PickupRequest__c/fields/Desired_pickup_time__c.field-meta.xml
<CustomField>
    <fullName>Desired_pickup_time__c</fullName>
    <description>佐野作成(喜多依頼分）</description>
    <label>引取希望時間帯</label>
    <length>50</length>
    <type>Text</type>
</CustomField>