force-app/main/default/objects/PickupRequest__c/fields/Desired_pickup_time_MVR__c.field-meta.xml
<CustomField>
    <fullName>Desired_pickup_time_MVR__c</fullName>
    <formula>Desired_pickup_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引取希望時間帯（MVR）</label>
    <type>Text</type>
</CustomField>