force-app/main/default/objects/PickupRequest__c/fields/Directions_Date__c.field-meta.xml
<CustomField>
    <fullName>Directions_Date__c</fullName>
    <description>山本</description>
    <label>指示書作成</label>
    <type>Date</type>
</CustomField>