force-app/main/default/objects/PickupRequest__c/fields/dis_volume__c.field-meta.xml
<CustomField>
    <fullName>dis_volume__c</fullName>
    <description>与儀</description>
    <label>排気量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>