force-app/main/default/objects/PickupRequest__c/fields/Displacement_MVR__c.field-meta.xml
<CustomField>
    <fullName>Displacement_MVR__c</fullName>
    <description>喜多</description>
    <formula>Case__r.Displacement__c</formula>
    <label>排気量（MVR）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>