force-app/main/default/objects/PickupRequest__c/fields/ExcessiveLimit_count__c.field-meta.xml
<CustomField>
    <fullName>ExcessiveLimit_count__c</fullName>
    <description>山本</description>
    <label>リミット超過カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>