force-app/main/default/objects/PickupRequest__c/fields/Field1VehicleCondition_Supplement_hs__c.field-meta.xml
<CustomField>
    <fullName>Field1VehicleCondition_Supplement_hs__c</fullName>
    <description>山本</description>
    <formula>TEXT( Case__r.VehicleCondition_Supplement_hs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積載車対応可否</label>
    <type>Text</type>
</CustomField>