force-app/main/default/objects/PickupRequest__c/fields/First_Replyed__c.field-meta.xml
<CustomField>
    <fullName>First_Replyed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>引取予定日を入力したらチェックをつける。山本</description>
    <label>初回返答済み</label>
    <type>Checkbox</type>
</CustomField>