force-app/main/default/objects/PickupRequest__c/fields/first_replyed_date__c.field-meta.xml
<CustomField>
    <fullName>first_replyed_date__c</fullName>
    <description>引取予定日を初回入力した日をセットする。山本</description>
    <label>初回返答日</label>
    <type>Date</type>
</CustomField>