force-app/main/default/objects/PickupRequest__c/fields/formula_Shift__c.field-meta.xml
<CustomField>
    <fullName>formula_Shift__c</fullName>
    <formula>IF( NOT( ISBLANK(  Case__c )),TEXT(Case__r.Shift__c), TEXT( PurchaseOpportunity__r.shift__c ))</formula>
    <inlineHelpText>買取受付または買取商談のシフトを反映</inlineHelpText>
    <label>シフト（数式）</label>
    <type>Text</type>
</CustomField>