force-app/main/default/objects/PickupRequest__c/fields/Inspection_year_hs__c.field-meta.xml
<CustomField>
    <fullName>Inspection_year_hs__c</fullName>
    <description>山本</description>
    <formula>TEXT( Case__r.Inspection_year_hs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検年</label>
    <type>Text</type>
</CustomField>