force-app/main/default/objects/PickupRequest__c/fields/InstructionLimitDate_CallA__c.field-meta.xml
<CustomField>
    <fullName>InstructionLimitDate_CallA__c</fullName>
    <label>指示書リミット日時</label>
    <type>DateTime</type>
</CustomField>