force-app/main/default/objects/PickupRequest__c/fields/landing_pickUp__c.field-meta.xml
<CustomField>
    <fullName>landing_pickUp__c</fullName>
    <description>佐野
物流・MVRへ引取依頼のフローで引取依頼(買取商談)の内容を反映</description>
    <label>直搬入先</label>
    <length>40</length>
    <type>Text</type>
</CustomField>