force-app/main/default/objects/PickupRequest__c/fields/Launched__c.field-meta.xml
<CustomField>
    <fullName>Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>立ち上げ済み</label>
    <type>Checkbox</type>
</CustomField>