force-app/main/default/objects/PickupRequest__c/fields/Ledger_supplierName_MVR__c.field-meta.xml
<CustomField>
    <fullName>Ledger_supplierName_MVR__c</fullName>
    <formula>PurchaseOpportunity__r.Ledger_supplierName__c</formula>
    <label>台帳仕入先名（MVR）</label>
    <type>Text</type>
</CustomField>