force-app/main/default/objects/PickupRequest__c/fields/Lift_availability__c.field-meta.xml
<CustomField>
    <fullName>Lift_availability__c</fullName>
    <description>与儀</description>
    <label>リフト可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>