force-app/main/default/objects/PickupRequest__c/fields/LotNo_MVR__c.field-meta.xml
<CustomField>
    <fullName>LotNo_MVR__c</fullName>
    <description>MVRがFM立ち上げ時にコピーする項目。山本</description>
    <formula>IF( NOT( ISBLANK( Case__c ) ) , Case__r.LotNo__c , LotNo__c )</formula>
    <label>ロット番号</label>
    <type>Text</type>
</CustomField>