force-app/main/default/objects/PickupRequest__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>山本</description>
    <label>MVRメモ</label>
    <type>TextArea</type>
</CustomField>