force-app/main/default/objects/PickupRequest__c/fields/model_name_half_width__c.field-meta.xml
<CustomField>
    <fullName>model_name_half_width__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <formula>IF( NOT( ISBLANK( PurchaseOpportunity__c )), PurchaseOpportunity__r.Mst_Models__r.model_name_half_width__c ,
IF( NOT( ISBLANK( Case__c )), Case__r.CarTypes__r.model_name_half_width__c ,null))</formula>
    <label>車種（半角カナ）</label>
    <type>Text</type>
</CustomField>