force-app/main/default/objects/PickupRequest__c/fields/ModelYearCarName__c.field-meta.xml
<CustomField>
    <fullName>ModelYearCarName__c</fullName>
    <description>山本</description>
    <formula>IF( OR( ISBLANK( Mst_Models_formula__c ) , ISBLANK( ModelYearPickList__c )) , LEFT( ModelYearPickList__c,4) &amp; Mst_Models_formula__c ,
LEFT( ModelYearPickList__c,4) &amp; &quot;・&quot; &amp; Mst_Models_formula__c)</formula>
    <label>年式・車種</label>
    <type>Text</type>
</CustomField>