force-app/main/default/objects/PickupRequest__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <description>山本</description>
    <formula>IF( ISBLANK( PurchaseOpportunity__c), TEXT( Case__r.FirstRegistration_Year_hs__c ),TEXT( PurchaseOpportunity__r.ModelYearPickList__c ) )</formula>
    <label>年式</label>
    <type>Text</type>
</CustomField>