force-app/main/default/objects/PickupRequest__c/fields/ModelYearPickList_MVR__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList_MVR__c</fullName>
    <formula>IF ( NOT( ISBLANK( PurchaseOpportunity__c) )  ,TEXT( PurchaseOpportunity__r.ModelYearPickList__c ) ,  TEXT ( Case__r.FirstRegistration_Year_hs__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式（MVR）</label>
    <type>Text</type>
</CustomField>