force-app/main/default/objects/PickupRequest__c/fields/Mst_Models_formula__c.field-meta.xml
<CustomField>
    <fullName>Mst_Models_formula__c</fullName>
    <formula>IF( NOT( ISBLANK( PurchaseOpportunity__c )), PurchaseOpportunity__r.Mst_Models_formula__c ,
IF( NOT( ISBLANK( Case__c  )),  Case__r.car_model2__c ,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種</label>
    <type>Text</type>
</CustomField>