force-app/main/default/objects/PickupRequest__c/fields/Mst_Type_MVR__c.field-meta.xml
<CustomField>
    <fullName>Mst_Type_MVR__c</fullName>
    <description>喜多</description>
    <label>型式（MVR）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>