force-app/main/default/objects/PickupRequest__c/fields/nearest_yardcord__c.field-meta.xml
<CustomField>
    <fullName>nearest_yardcord__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <formula>IF(NOT(ISBLANK(Case__c)), TEXT(Case__r.nearest_yard__c), TEXT(PurchaseOpportunity__r.nearest_yard__c))</formula>
    <inlineHelpText>ヤードシステムの段取ヤードと連携</inlineHelpText>
    <label>最寄りヤード</label>
    <type>Text</type>
</CustomField>