force-app/main/default/objects/PickupRequest__c/fields/NotAvailable__c.field-meta.xml
<CustomField>
    <fullName>NotAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>喜多</description>
    <label>希望日不可</label>
    <type>Checkbox</type>
</CustomField>