force-app/main/default/objects/PickupRequest__c/fields/NumberRemoved_formula__c.field-meta.xml
<CustomField>
    <fullName>NumberRemoved_formula__c</fullName>
    <description>与儀</description>
    <formula>IF(NOT(ISBLANK(TEXT(PurchaseOpportunity__r.NumberRemoved_list__c))),TEXT(PurchaseOpportunity__r.NumberRemoved_list__c),TEXT(Case__r.NumberRemoved_list__c))</formula>
    <label>ナンバー外し</label>
    <type>Text</type>
</CustomField>