force-app/main/default/objects/PickupRequest__c/fields/OBIC_master_formula__c.field-meta.xml
<CustomField>
    <fullName>OBIC_master_formula__c</fullName>
    <description>山本</description>
    <formula>IF(ISBLANK(PurchaseOpportunity__r.Account__r.ParentId ), PurchaseOpportunity__r.Account__r.OBIC_master__c ,
IF(PurchaseOpportunity__r.Account__r.SummaryAccountFlg__c ,PurchaseOpportunity__r.Account__r.OBIC_master__c ,
IF(ISBLANK(PurchaseOpportunity__r.Account__r.Parent.ParentId),PurchaseOpportunity__r.Account__r.Parent.OBIC_master__c,
IF(PurchaseOpportunity__r.Account__r.Parent.SummaryAccountFlg__c,PurchaseOpportunity__r.Account__r.Parent.OBIC_master__c,
IF(ISBLANK(PurchaseOpportunity__r.Account__r.Parent.Parent.ParentId),PurchaseOpportunity__r.Account__r.Parent.Parent.OBIC_master__c,
IF(PurchaseOpportunity__r.Account__r.Parent.Parent.SummaryAccountFlg__c,PurchaseOpportunity__r.Account__r.Parent.Parent.OBIC_master__c,PurchaseOpportunity__r.Account__r.Parent.Parent.Parent.OBIC_master__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBIC仕入先マスタ登録済み</label>
    <type>Checkbox</type>
</CustomField>