force-app/main/default/objects/PickupRequest__c/fields/OBIC_ordernum__c.field-meta.xml
<CustomField>
    <fullName>OBIC_ordernum__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>OBIC受注番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>