force-app/main/default/objects/PickupRequest__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>PurchaseOpportunity__r.TakeUpDate__c</formula>
    <label>オーダー引取日</label>
    <type>Date</type>
</CustomField>