force-app/main/default/objects/PickupRequest__c/fields/Order_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Order_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>オーダー確定</label>
    <type>Checkbox</type>
</CustomField>