force-app/main/default/objects/PickupRequest__c/fields/Other_companies_AA_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Other_companies_AA_Pickup__c</fullName>
    <description>佐野
買取商談の他社オク出品と連携</description>
    <formula>PurchaseOpportunity__r.OtherAA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>他社オク出品</label>
    <type>Checkbox</type>
</CustomField>